# aha_moment

./: .gitignore  CODE_REVIEW_REPORT.md  README.md  aha_Llama_countdown_working (jun25).ipynb  grpo_training_qwen.ipynb  pyproject.toml
examples/data_preprocess/: countdown.py  enhanced_data_preprocess.py
examples/tiny_zero/: experiment.yaml  train.sh
scripts/det_scripts/: train_grpo.sh  train_ppo.sh
verl/models/: model.py
verl/trainer/: main_ppo.py
verl/utils/inference/: tool_handler.py
verl/utils/reward_score/: countdown.py  multiply.py
